edit the css file

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Times New Roman", serif;
+  font-style: italic;
   background-color: #FFFCEF;
   margin: 0;
   padding: 20px;
